# ldes_translation_gh_action

./: .env  .gitignore  Dockerfile  README.md  config.yml  ldes_constraints.ttl
.github/: last_ldes_hash
P02/: http___vocab_nerc_ac_uk_collection_P02_current_A01X_.yml  http___vocab_nerc_ac_uk_collection_P02_current_A999_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AAFX_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AALK_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AAMN_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AASD_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AATX_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AAWC_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ABAG_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ACFL_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ACNT_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ACO2_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ACSR_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ACYC_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ADUN_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AEYN_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AHGT_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ALAT_.yml  http___vocab_nerc_ac_uk_collection_P02_current_ALKY_.yml  http___vocab_nerc_ac_uk_collection_P02_current_AMON_.yml  (+449 more)
ldes/: ldes_constraints.ttl
src/: config_validation.py  ldes_download.sh  ldes_harvest.sh  ldes_sync.py  pyproject.toml  ttl_to_yml.py  ymls_to_ldes_ttl.py
src/templates/: ldes_feed.ttl  query.sparql
(+388 files in other folders)
